LU-13766 obdclass: additional grant debug info

Add additional CDEBUG calls, and additional fields to existing calls,
in tgt_grant_check() and tgt_grant_alloc().

Existing debug fields and calls did not cover all the cases where a
client might not be allocated additional grant it asked for.

Test-parameters: fortestonly testlist=sanity

Signed-off-by: Olaf Faaland <faaland1@llnl.gov>
Change-Id: Ia2bd6ac49d6855deb73608a7c7980f9cd193befe